	- fixed bug in ht_sys_file/ht_stdio_file::extend()
	- eval dialog: +function help
	- eval: not ('~') and logical-not ('!') operators implemented
	- disassembler interface (int maxlen, not byte maxlen)
	- experimental PEF support
	- fixed bug, causing invalid history entries when specifying files
	  on the command-line
	- ELF/relocatable file support

version 0.7.4:
	- fixed bug in COFF code (hdr_ofs sometimes fixed to 0x800)
	- fixed bug in blockop (checking if const/var op didn't set 'i' and 'o' and sometimes failed)
	- fixed bug in Java bytecode disassembler: invalid opcodes crash.
	  Thanks Jerome (freejazz).
	- fixed bug in Java class processing code: errors always crash HT
	- fixed: 0xcafebabe in mach_kernel... made classread more strict
	- fixed object streaming bug in GET_OBJECT (only when compiled with GCC 3.3+)

version 0.7.3:
	- some keys were assigned to multiple commands in hex-viewer
	- percent display for searches and scrollbars in big files was incorrect
	- POSIX: improved keyboard handling (merge from 0.9.0 tree)
	- POSIX: X11 textmode keyboard support didn't work :-), was not configured correctly
branch_only	- configure now does final (release) builds by default (ie. -O2 -fomit-frame-pointer)
branch_only	- binary search in */image disabled because its buggy

version 0.7.2:
	- Hexview: Number of bytes per line can be changed now
	- PE/header: can now follow bound import directory link (it's offset not RVA !)
	- x86dis: "0f 0f 0f" is now marked invalid (as it should be)
	- alt-x in blockop dialog was used twice by "cut" and "select expr"
	- fixed problem in streams that caused files not to be flagged "modified"
	- security fix: main.cc: strncpy(appname, argv[0], sizeof appname-1);
	- qword "x shl/shr 32" returns invalid result
	- ELF/section headers: flags now displayed correctly (thanks "scut")
	- (POSIX) slightly improved keyboard handling (Ctrl+W = close window)

version 0.7.1:
	- (win2k/xp) fixed bug that caused ht to create ht.cfg in current