@@ -28,6 +28,9 @@
 
 #define HT_SYS_NAME			"Win32"
 
+#define SYS_SUPPORT_NATIVE_CLIPBOARD
+#define SYS_NATIVE_CLIPBOARD_NAME "Windows Clipboard"
+
 int sys_canonicalize(char *result, const char *filename);
 int sys_findclose(pfind_t *pfind);
 int sys_findfirst(const char *dirname, pfind_t *pfind);
@@ -39,6 +42,10 @@ int sys_truncate(const char *filename, FILEOFS ofs);
 int sys_deletefile(const char *filename);
 bool sys_is_path_delim(char c);
 int sys_filename_cmp(const char *a, const char *b);
+
+bool sys_write_data_to_native_clipboard(const void *data, int size);
+int sys_get_native_clipboard_data_size();
+bool sys_read_data_from_native_clipboard(void *data, int max_size);
 
 int sys_ipc_exec(ht_streamfile **in, ht_streamfile **out, ht_streamfile **err, int *handle, const char *cmd, int options);
 bool sys_ipc_is_valid(int handle);
